--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -1,7 +1,7 @@
 # Parte I
 
 1. Protocolos de rede
-2. Modelo OSI e TCP/IP
+2. [Modelo OSI e TCP/IP](./2.modelosOSI.md)
 
 ## 1. Protocolos de rede
 
@@ -40,13 +40,13 @@ Essas camadas, junto com alguns exemplos de protocolos, são:
 
 Fonte/Citação: [weblink](https://www.weblink.com.br/blog/tecnologia/conheca-os-principais-protocolos-de-internet/)
 
-**1. IP**
+#### 1. IP
 
 O protocolo IP, do termo em inglês Internet Protocol (Protocolo de Internet) faz parte da camada de internet e é um dos protocolos mais importantes da web. Ele permite a elaboração e transporte dos pacotes de dados, porém sem assegurar a sua entrega.
 
 O destinatário da mensagem é determinado por meio dos campos de endereço **IP** (endereço do computador), **máscara de sub rede** (determina parte do endereço que se refere à rede) e o campo **gateway** estreita por padrão (permite saber qual o computador de destino, caso não esteja localizado na rede local).
 
-**1.1 IP, máscara de sub rede e gateway**
+##### 1.1 IP, máscara de sub rede e gateway
 
 O endereço de IP, parece como o endereço da nossa casa.
 Para recebemos coisas/pacotes dos correrios, precisamos informar o endereço da nossa casa.
@@ -76,7 +76,7 @@ Essas três opções(wifi, cabo e rede móveis) funcionam como o portão princip
 
 Fonte/Citação: [e-tinet](https://e-tinet.com/linux/ifconfig/) e [tecnoblog](https://tecnoblog.net/responde/o-que-e-gateway/)
 
-**1.2 IP interno e IP externo**
+##### 1.2 IP interno e IP externo
 
 O IP local (ou IP interno) identifica cada dispositivo individualmente. Ou seja, é o endereço atribuído pelo roteador à sua máquina na rede local.
 
