--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -91,3 +91,11 @@ Fonte/Citação: [avast](https://www.avast.com/pt-br/c-ip-address-public-vs-priv
 ![IP interno e Externo](/redes//redes-iniciante/pics/ipInternoExterno.png)
 
 > Estou no meu notebook e quero me comunicar com o site www.google.com → O IP interno 192.168.0.109 do meu dispositivo envia a informação para o IP interno do roteador (gateway  192.168.0.1) → e o IP interno 192.168.0.1 envia para rede externa 216.58.192.5 → que faz a comunicação com a internet.
+
+##### O que podemos descobrir com o IP?
+
+- O sistema do roteador
+- Quais portas estão abertas (port scan - NMAP)
+- Servidor exposto
+
+Mas você pode reiniciar o roteador/modem ou entrar em contato com o provedor de internet para mudar o IP.
