--- a/redes/redes-iniciante/parte1/2.modelosOSI.md
+++ b/redes/redes-iniciante/parte1/2.modelosOSI.md
@@ -7,11 +7,11 @@
 
 O TCP/IP, trata-se do acrônimo dos protocolos TCP (Transmission Control Protocol) e IP (Internet Protocol), e são os responsáveis pela base de envio e recebimento de dados por toda a internet. Essa pilha de protocolos é dividida em 5 camadas (em referência ao RFC1392, mas as vezes é dito 4 camadas):
 
-    · 5° Camada - Aplicação: Essa parte contém todos os protocolos para um serviço específico de comunicação de dados em um nível de processo-a-processo. Exemplo: HTTP, HTTPS, FTP, DNS.
-    · 4° Camada - Transporte: É esta camada que garante o envio e o recebimento dos pacotes vindos da camada 3. Ela gerencia o transporte dos pacotes para garantir o sucesso no envio e no recebimento de dados. Exemplo: TCP e UDP.
-    · 3° Camada - Rede (Internet): É nesta camada que temos o endereçamento IP de origem e de destino, ela também pode priorizar alguns pacotes e decidir qual caminho seguir para enviar seus dados. Exemplo: IP, ICMP, NAT.
-    · 2° Camada - Enlace (Ligação): Nesta camada, os dados recebidos do meio físico são verificados para ver se possuem algum erro e,se possuírem, esse erro pode ser corrigido. Dessa forma, as camadas superiores podem assumir uma transmissão praticamente sem erros. Nesta camada também encontra-se o Endereço MAC. Exemplo: Ethernet, Wi-Fi.
-    · 1° Camada - Física: Nesta camada são especificados os dispositivos, como hubs e os meios de transmissão, como os cabos de rede. Os dados são transmitidos por esses meios e processados na segunda camada. (editado)
+- 5° Camada - Aplicação: Essa parte contém todos os protocolos para um serviço específico de comunicação de dados em um nível de processo-a-processo. Exemplo: HTTP, HTTPS, FTP, DNS.
+- 4° Camada - Transporte: É esta camada que garante o envio e o recebimento dos pacotes vindos da camada 3. Ela gerencia o transporte dos pacotes para garantir o sucesso no envio e no recebimento de dados. Exemplo: TCP e UDP.
+- 3° Camada - Rede (Internet): É nesta camada que temos o endereçamento IP de origem e de destino, ela também pode priorizar alguns pacotes e decidir qual caminho seguir para enviar seus dados. Exemplo: IP, ICMP, NAT.
+- 2° Camada - Enlace (Ligação): Nesta camada, os dados recebidos do meio físico são verificados para ver se possuem algum erro e,se possuírem, esse erro pode ser corrigido. Dessa forma, as camadas superiores podem assumir uma transmissão praticamente sem erros. Nesta camada também encontra-se o Endereço MAC. Exemplo: Ethernet, Wi-Fi.
+- 1° Camada - Física: Nesta camada são especificados os dispositivos, como hubs e os meios de transmissão, como os cabos de rede. Os dados são transmitidos por esses meios e processados na segunda camada. (editado)
 
 Já o modelo OSI é bastante similar, com a diferença de que a Camada de Aplicação é dividida em 3 partes: **Aplicação, Apresentação e Sessão**.
 
