--- a/redes/redes-iniciante/parte1/2.modelosOSI.md
+++ b/redes/redes-iniciante/parte1/2.modelosOSI.md
@@ -47,6 +47,8 @@ Tradução de todas as informações para que ela seja compreendida.
 
 **Essa é a camada responsável pela abertura e fechamento da comunicação entre os dois dispositivos**. O tempo decorrido entre o momento em que a comunicação é aberta e fechada é conhecido como "sessão". A camada de sessão garante que a sessão permaneça aberta pelo tempo necessário para transferir todos os dados que estão sendo trocados e, em seguida, fecha imediatamente a sessão para evitar o desperdício de recursos.
 
+A camada sessão também lida com funções de autenticação e autorização. Verificando também a entrega dos dados.
+
 ![5. Sessão](../pics/5-session-layer.svg)
 
 Iniciar, manter e finalizar uma sessão de comunicação. Ex: fechar um site.
@@ -71,13 +73,44 @@ Ojetivo: endereçamento lógico, roteamento e controle de trafégo por meio do I
 
 ![2 Enlace de dados](../pics/2-data-link-layer.svg)
 
+Fonte: [cloudflare](https://www.cloudflare.com/pt-br/learning/ddos/glossary/open-systems-interconnection-model-osi/)
+
 #### 1. Camada física
 
 **Essa camada inclui o equipamento físico envolvido na transferência de dados, como cabos e comutadores**. Essa também é a camada em que os dados são convertidos em um fluxo de bits, que é uma sequência de 1s e 0s. A camada física de ambos os dispositivos também precisa aceitar de comum acordo uma convenção de sinal para que se possa distinguir os 1s dos 0s em ambos os dispositivos.
 
 ![1. Física](../pics/1-physical-layer.svg)
 
-Fonte: [cloudflare](https://www.cloudflare.com/pt-br/learning/ddos/glossary/open-systems-interconnection-model-osi/)
+### Analogia modelo OSI → Enviando e-mail
+
+**Cenário**: Gerente de TI enviando e-mail para a chefe de TI.
+
+**7. Camada de aplicação**
+Para a gerente enviar um e-mail, ela usará um provedor de e-mail(Outlook, Gmail, Protonmail, Thunderbird...). Nesse cenário, o cliente de e-mail usará o protocolo SMTP e o comando para informar ao computador como lidar com esses dados.
+
+![send email](../pics/7.sendemail.webp)
+> Ele fornece a interface para o usuário informar ao computador como lidar com os dados.
+
+**6. Apresentação**
+Nessa camada é a criptografia e compactação de dados. Com criptografia, define o quão segura a comunicação deve acontecer para ir para próxima camada OSI. Por exemplo, nesta camada, você pode usar SSL (secure socket layer) para a criptografia dos dados. Com a compactação de dados nesta camada, pode-se melhorar o throughput dos dados nas camadas inferiores.
+
+![send email](../pics/6.sendemail.png)
+> A camada de apresentação é responsável pela tradução, criptografia e compactação dos dados.
+
+**5. Sessão**
+A camada de sessão é responsável por manter a conexão com a chefe de TI para entregar o e-mail corretamente.
+
+Digamos que a gerente de TI abriu dois sites além do provedor de e-mail, um para ouvir música e outra para fazer compras. A camada de sessão é encarregada de manter todas essas conexões ativas, gerenciá-las e encerrá-las.
+
+![send email](../pics//5sendemail.webp)
+
+**Camada de transporte**
+A camada de transporte decidirá a confiabilidade e o controle de fluxo. Neste, os dados de e-mail da gerente de TI serão divididos em segmentos para serem transmitidos. Aqui, é necessário selecionar se isso será transmitido como pacotes **TCP** ou pacotes **UDP**.
+
+![send email](../pics/4sendemail.jpg)
+
+Você pode pensar na camada de transporte como controle de qualidade. Pacotes suspeitos não passarão por um firewall.
+
 ### Tipos de ataques em cada nível do modelo OSI
 
 - Na camada física, é comum a utilização de um sniffer (wireshark) que nos permite ler os dados em modo bruto que circulam pela placa de rede.
