--- a/redes/redes-iniciante/parte1/2.1analogiaOSI.md
+++ b/redes/redes-iniciante/parte1/2.1analogiaOSI.md
@@ -21,7 +21,7 @@ Digamos que a gerente de TI abriu dois sites além do provedor de e-mail, um par
 
 ![send email](../pics//5sendemail.webp)
 
-**5.Camada de transporte**
+**4.Camada de transporte**
 A camada de transporte decidirá a confiabilidade e o controle de fluxo. Neste, os dados de e-mail da gerente de TI serão divididos em segmentos para serem transmitidos. Aqui, é necessário selecionar se isso será transmitido como pacotes **TCP**(favorece a qualidade dos dados em detrimento da velocidade) ou pacotes **UDP**(favorece a velocidade em detrimento da qualidade dos dados).
 
 Cada segmento, ou unidade de dados, possui um número de porta de origem e destino, bem como um número de sequência. O número da porta garante que o segmento alcance o aplicativo correto. O número de sequência garante que os segmentos cheguem na ordem correta.
@@ -31,14 +31,14 @@ Cada segmento, ou unidade de dados, possui um número de porta de origem e desti
 Você pode pensar tbm na camada de transporte como controle de qualidade. Pacotes suspeitos não passarão por um firewall.
 
 **3. Camada de rede**
-Nessa camada definirá as rotas de origem e destiono, como o pacote sai do computador da gerente de TI para o computador da chefe de TI. Ele adiciona o endereço IP do remetente(origem) e o endereço IP do destinatário(destiono) ao pacote de dados. Agora cada pacote de dados sabe para onde deve ir.
+Nessa camada definirá as rotas de origem e destino, como o pacote sai do computador da gerente de TI para o computador da chefe de TI. Ele adiciona o endereço IP do remetente(origem) e o endereço IP do destinatário(destino) ao pacote de dados. Agora cada pacote de dados sabe para onde deve ir.
 
 ![send email](../pics/3sendemail.webp)
 
 >A camada 3 também determina os melhores caminhos para entrega de dados.
 
 **2. Camada de enlace de dados**
-Como sabemos na camada de rede, o pacote foi modificado com o endereço IP do remetente(origem) e o endereço IP do destinatário(destiono). Digamos que ao chegar na rede da chefe de TI, tem 5 dispositivos conectados nessa rede, como saberemos o pacote vai exatamente para o computador da chefe de TI? Como o endereçamento físico.
+Como sabemos na camada de rede, o pacote foi modificado com o endereço IP do remetente(origem) e o endereço IP do destinatário(destino). Digamos que ao chegar na rede da chefe de TI, tem 5 dispositivos conectados nessa rede, como saberemos o pacote vai exatamente para o computador da chefe de TI? Como o endereçamento físico.
 
 A camadade de enlace executa o endereçamento físico. Ele adiciona endereços [MAC](outrosConceitos.md#endereço-mac)(como se fosse um CPF da máquina) do remetente e do destinatário ao pacote de dados para formar uma unidade de dados chamada frame. A camada 2 permite que os frames sejam transportados via mídia local (por exemplo, fio de cobre, fibra ótica ou ar). Essa camada é incorporada como software na placa de interface de rede (NIC) do seu computador.
 
