--- a/redes/redes-iniciante/parte1/2.1analogiaOSI.md
+++ b/redes/redes-iniciante/parte1/2.1analogiaOSI.md
@@ -2,6 +2,10 @@
 
 **Cenário**: Gerente de TI enviando e-mail para a chefe de TI.
 
+```js
+Lembre-se de que, embora o modelo OSI seja o que estudamos, não usamos OSI. Usamos o modelo de rede TCP/IP. O modelo OSI ainda é ensinado devido a sua utilidade em separar conceitos em 7 camadas.
+```
+
 **7. Camada de aplicação**
 Para a gerente enviar um e-mail, ela usará um provedor de e-mail(Outlook, Gmail, Protonmail, Thunderbird...). Nesse cenário, o cliente de e-mail usará o protocolo SMTP e o comando para informar ao computador como lidar com esses dados.
 
@@ -51,3 +55,5 @@ Agora os dados estão prontos para serem transmitidos para o lado do receptor. A
 
 **Camada 2 e 1**:
 ![send email](../pics/1.sendemail.webp)
+
+**Fonte**: [rebeladmin](https://www.rebeladmin.com/2014/06/osi-in-action/)
