--- a/redes/redes-iniciante/parte1/2.1analogiaOSI.md
+++ b/redes/redes-iniciante/parte1/2.1analogiaOSI.md
@@ -3,7 +3,8 @@
 **Cenário**: Gerente de TI enviando e-mail para a chefe de TI.
 
 ```js
-Lembre-se de que, embora o modelo OSI seja o que estudamos, não usamos OSI. Usamos o modelo de rede TCP/IP. O modelo OSI ainda é ensinado devido a sua utilidade em separar conceitos em 7 camadas.
+Lembre-se de que, embora o modelo OSI seja o que estudamos, não usamos OSI. 
+Usamos o modelo de rede TCP/IP. O modelo OSI ainda é ensinado devido a sua utilidade em separar conceitos em 7 camadas.
 ```
 
 **7. Camada de aplicação**
