--- a/redes/redes-iniciante/parte1/2.1analogiaOSI.md
+++ b/redes/redes-iniciante/parte1/2.1analogiaOSI.md
@@ -57,4 +57,4 @@ Agora os dados estão prontos para serem transmitidos para o lado do receptor. A
 **Camada 2 e 1**:
 ![send email](../pics/1.sendemail.webp)
 
-**Fonte**: [rebeladmin](https://www.rebeladmin.com/2014/06/osi-in-action/)
+## Fonte: [rebeladmin](https://www.rebeladmin.com/2014/06/osi-in-action/)
