--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -99,3 +99,64 @@ Fonte/Citação: [avast](https://www.avast.com/pt-br/c-ip-address-public-vs-priv
 - Servidor exposto
 
 Mas você pode reiniciar o roteador/modem ou entrar em contato com o provedor de internet para mudar o IP.
+
+##### 1.3 IPv4 e IPv6
+
+Já pensou no caos que seria o serviço de correios se houvesse um limite para designar endereços no mundo? Novas casas começam a surgir, mas não temos como identificá-las, porque as opções de endereços acabaram! Foi mais ou menos isso que aconteceu com os endereços das máquinas que acessam a internet.
+
+O que acontece é que o Protocolo de Internet definido na década de 80, lá no início da internet, também conhecido como IPv4, tem um limite de combinações de endereços de 4 bilhões. Claro que na época em que foi criado não se imaginaria que algum dia essa quantidade seria insuficiente para atender a todos, mas à medida que a internet foi se popularizando e outros dispositivos como os smartphones começaram a surgir, foi preciso pensar em algumas soluções para o problema do esgotamento de endereços IP.
+
+**O que é IPv4 e IPv6?**
+
+- **IPv4** (Internet Protocol versão 4) é o formato de endereço padrão que permite que todos os computadores na internet se comuniquem entre si. O IPv4 é escrito como uma sequência de dígitos de 32 bits e um endereço IPv4 é composto por quatro números, cada um entre 0 e 255, separados por pontos.
+
+O IPv4 permite mais de 4 bilhões de endereços diferentes e tem nos atendido bem por décadas.
+
+> exemplo de IPv4: 168.213.226.204
+
+- **IPv6** (Internet Protocol versão 6) é um padrão atualizado para identificar computadores na Internet. Como o IPv4, ele oferece um identificador exclusivo a cada dispositivo, que foi ajustado para acomodar o número crescente de computadores conectados à internet.
+
+O IPv6 aumenta o número de endereços IP possíveis de 4 bilhões de IPv4 para 340 trilhões de trilhões de trilhões. O IPv6 é escrito como uma string hexadecimal de dígitos de 128 bits e um endereço IPv6 típico se parece com isto:
+
+> 2001:0ab8:85a2:0000:0000:8a3e:0370:7334
+
+**As principais diferenças entre o protocolo IPv4 e IPv6**
+
+- A principal diferença entre o protocolo IPv4 e o protocolo IPv6 é a capacidade de expansão que cada um apresenta. Como vimos anteriormente, o IPv6 possibilita a criação de muito mais endereços do que seu antecessor; cerca de 79 octilhões a mais, para ser mais específico. O que é o mesmo que 56 octilhões de endereços por ser humano na terra.
+
+- O IPv6 também acabou com um dos maiores vilões do IPv4: o broadcast. Na nova versão, são utilizados apenas unicast e multicast, e houve a introdução do anycast, um tipo de endereço configurado em múltiplas interfaces.
+
+```bash
+- Unicast: Comunicação um para um.
+- Multicast: Comunicação um para muitos (grupo de dispositivos configurados com o mesmo endereço).
+- Anycast: Endereço configurado em múltiplas interfaces.
+```
+
+- Além disso, no protocolo IPv6 não se usa mais o termo “máscara”, e sim “prefixo”, mudando a forma de endereçamento. Ele ainda mantém a parte de rede, sub rede e host, como no protocolo IPv4, mas há essa diferença.
+
+- Por fim, o IPv6 também difere do seu precursor na parte do cabeçalho ou header. Nele, tudo foi simplificado e houve a introdução dos chamados “cabeçalhos de extensão”, além do suporte nativo a questões importantes como segurança e QoS. Assim, podemos concluir que o protocolo IPv6 é uma versão muito mais eficiente, segura e útil que o IPv4.
+
+|         | IPv4   |  IPv6  |
+----------|--------|---------|
+| Tamanho do endereço | 32-bits(0-255)   | 128-bits(16 octetos) |
+| Notação | Decimal com ponto | Hexadecimal alfanúmerica |
+| Exemplo | 168.213.226.204 | 2001:0ab8:85a2:0000:0000:8a3e:0370:7334 |
+| Como obter o IP | DHCP ou configuração manual | Compatível com configuração automática |
+
+**Segurança**
+
+- Ipv6 criptografia de ponta a ponta, tornando o ataque man-in-the-middle(MITM) mais difícil.
+- IPSec nativo(mas o usuário precisa ativar). Existe no IPv4, mas precisa ser configurado pelo provedor de internet.
+  - IPSec fornece recursos de criptografia de pacotes de dados, de forma a garantir três aspectos destes: integridade, confidencialidade e autenticidade.
+
+**IPv6 é mais/menos seguro que IPv4?**
+
+Comparar a segurança do IPv4 com a segurança do IPv6 não faz sentido. Ambos tem as suas vulnerabilidades.
+
+É essencial lembrar que muitos ataques acontecem acima da camada de rede(modelo TCP/IP). Um e- mail de phishing associado a ransomware, por exemplo, representa a mesma ameaça, seja entregue por um link IPv4 ou IPv6.
+
+Ou seja, não é limitação de tecnologia e sim grande parte dos ataques se reume ao fator humano.
+
+A coisa mais importante que você pode fazer para aumentar a segurança IPv6 da sua organização é aprender o protocolo, como ele funciona e como ele é implementado em diferentes sistemas.
+
+Fontes: [avg](https://www.avg.com/pt/signal/ipv4-vs-ipv6), [hostone](https://blog.hostone.com.br/protocolo-ipv4-ipv6/), [eletronet](https://www.eletronet.com/blog/entenda-as-diferencas-entre-ipv4-e-ipv6/) e [dltec](http://www.dltec.com.br/blog/redes/diferencas-entre-ipv4-e-ipv6/)
