--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -1,6 +1,6 @@
 # Parte I
 
-1. Protocolos de rede
+1. [Protocolos de rede](#1-protocolos-de-rede)
 2. [Modelo OSI e TCP/IP](./2.modelosOSI.md)
 
 ## 1. Protocolos de rede
@@ -8,6 +8,10 @@
 ```aside
 Protocolos de Rede (TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 ```
+
+- [O que são procotocolos de rede e para que servem?](#o-que-são-procotocolos-de-rede-e-para-que-servem)
+- [Tipos de protocolos de rede](#tipos-de-protocolos-de-rede)
+- [1. IP](#1-ip)
 
 ### O que são procotocolos de rede e para que servem?
 
@@ -40,13 +44,13 @@ Essas camadas, junto com alguns exemplos de protocolos, são:
 
 Fonte/Citação: [weblink](https://www.weblink.com.br/blog/tecnologia/conheca-os-principais-protocolos-de-internet/)
 
-#### 1. IP
+### 1. IP
 
 O protocolo IP, do termo em inglês Internet Protocol (Protocolo de Internet) faz parte da camada de internet e é um dos protocolos mais importantes da web. Ele permite a elaboração e transporte dos pacotes de dados, porém sem assegurar a sua entrega.
 
 O destinatário da mensagem é determinado por meio dos campos de endereço **IP** (endereço do computador), **máscara de sub rede** (determina parte do endereço que se refere à rede) e o campo **gateway** estreita por padrão (permite saber qual o computador de destino, caso não esteja localizado na rede local).
 
-##### 1.1 IP, máscara de sub rede e gateway
+#### 1.1 IP, máscara de sub rede e gateway
 
 O endereço de IP, parece como o endereço da nossa casa.
 Para recebemos coisas/pacotes dos correrios, precisamos informar o endereço da nossa casa.
@@ -76,7 +80,7 @@ Essas três opções(wifi, cabo e rede móveis) funcionam como o portão princip
 
 Fonte/Citação: [e-tinet](https://e-tinet.com/linux/ifconfig/) e [tecnoblog](https://tecnoblog.net/responde/o-que-e-gateway/)
 
-##### 1.2 IP interno e IP externo
+#### 1.2 IP interno e IP externo
 
 O IP local (ou IP interno) identifica cada dispositivo individualmente. Ou seja, é o endereço atribuído pelo roteador à sua máquina na rede local.
 
@@ -92,7 +96,7 @@ Fonte/Citação: [avast](https://www.avast.com/pt-br/c-ip-address-public-vs-priv
 
 > Estou no meu notebook e quero me comunicar com o site www.google.com → O IP interno 192.168.0.109 do meu dispositivo envia a informação para o IP interno do roteador (gateway  192.168.0.1) → e o IP interno 192.168.0.1 envia para rede externa 216.58.192.5 → que faz a comunicação com a internet.
 
-##### O que podemos descobrir com o IP?
+#### O que podemos descobrir com o IP?
 
 - O sistema do roteador
 - Quais portas estão abertas (port scan - NMAP)
@@ -100,7 +104,7 @@ Fonte/Citação: [avast](https://www.avast.com/pt-br/c-ip-address-public-vs-priv
 
 Mas você pode reiniciar o roteador/modem ou entrar em contato com o provedor de internet para mudar o IP.
 
-##### 1.3 IPv4 e IPv6
+#### 1.3 IPv4 e IPv6
 
 Já pensou no caos que seria o serviço de correios se houvesse um limite para designar endereços no mundo? Novas casas começam a surgir, mas não temos como identificá-las, porque as opções de endereços acabaram! Foi mais ou menos isso que aconteceu com os endereços das máquinas que acessam a internet.
 
@@ -160,3 +164,5 @@ Ou seja, não é limitação de tecnologia e sim grande parte dos ataques se reu
 A coisa mais importante que você pode fazer para aumentar a segurança IPv6 da sua organização é aprender o protocolo, como ele funciona e como ele é implementado em diferentes sistemas.
 
 Fontes: [avg](https://www.avg.com/pt/signal/ipv4-vs-ipv6), [hostone](https://blog.hostone.com.br/protocolo-ipv4-ipv6/), [eletronet](https://www.eletronet.com/blog/entenda-as-diferencas-entre-ipv4-e-ipv6/) e [dltec](http://www.dltec.com.br/blog/redes/diferencas-entre-ipv4-e-ipv6/)
+
+---------------------------
